# SongRequestBotPlayer

./: Cargo.toml
queue/: app.js  index.html  style.css
src/: main.rs
static/: index.css  index.html  main.js
templates/: base.html.tera  index.html.tera
