[package]
name = "SongRequestPlayer"
version = "0.1.0"
authors = ["Ntacman <Ntacman@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde_derive = "1.0.104"
serde = "1.0.104"
lazy_static = "1.4.0"
